configs: ih8sn: Update gta4xl{,wifi}
Signed-off-by: Kevin F. Haggerty <haggertk@lineageos.org>
Change-Id: I49e13d86d4074b501ff44e7e9c0043711f5007b3

--- a/configs/ih8sn/ih8sn_gta4xlwifi.conf
+++ b/configs/ih8sn/ih8sn_gta4xlwifi.conf
@@ -1,6 +1,6 @@
-BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:11/RP1A.200720.012/P610XXS2DUJ4:user/release-keys
-BUILD_DESCRIPTION=gta4xlwifixx-user 11 RP1A.200720.012 P610XXS2DUJ4 release-keys
-BUILD_SECURITY_PATCH_DATE=2021-10-01
+BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:11/RP1A.200720.012/P610XXS2DVA3:user/release-keys
+BUILD_DESCRIPTION=gta4xlwifixx-user 11 RP1A.200720.012 P610XXS2DVA3 release-keys
+BUILD_SECURITY_PATCH_DATE=2022-01-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_RELEASE=11
