configs: ih8sn: Update blueline
Signed-off-by: Kevin F. Haggerty <haggertk@lineageos.org>

--- a/configs/ih8sn/ih8sn_blueline.conf
+++ b/configs/ih8sn/ih8sn_blueline.conf
@@ -1,7 +1,7 @@
-BUILD_FINGERPRINT=google/blueline/blueline:11/RQ3A.211001.001/7641976:user/release-keys
-BUILD_DESCRIPTION=blueline-user 11 RQ3A.211001.001 7641976 release-keys
+BUILD_FINGERPRINT=google/blueline/blueline:12/SP1A.210812.016.C1/8029091:user/release-keys
+BUILD_DESCRIPTION=blueline-user 12 SP1A.210812.016.C1 8029091 release-keys
 BUILD_SECURITY_PATCH_DATE=2021-10-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=11
+BUILD_VERSION_RELEASE=12
 DEBUGGABLE=0
