--- a/configs/ih8sn/ih8sn_gta4xl.conf
+++ b/configs/ih8sn/ih8sn_gta4xl.conf
@@ -1,7 +1,7 @@
-BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:11/RP1A.200720.012/P615XXS4DVA4:user/release-keys
-BUILD_DESCRIPTION=gta4xlxx-user 11 RP1A.200720.012 P615XXS4DVA4 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-01-01
+BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:12/SP1A.210812.016/P615XXU4EVC5:user/release-keys
+BUILD_DESCRIPTION=gta4xlxx-user 12 SP1A.210812.016 P615XXU4EVC5 release-keys
+BUILD_SECURITY_PATCH_DATE=2022-03-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=11
+BUILD_VERSION_RELEASE=12
 DEBUGGABLE=0
