--- a/configs/ih8sn/ih8sn_gta4xlwifi.conf
+++ b/configs/ih8sn/ih8sn_gta4xlwifi.conf
@@ -1,7 +1,7 @@
-BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:11/RP1A.200720.012/P610XXS2DVA3:user/release-keys
-BUILD_DESCRIPTION=gta4xlwifixx-user 11 RP1A.200720.012 P610XXS2DVA3 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-01-01
+BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:12/SP1A.210812.016/P610XXU2EVC5:user/release-keys
+BUILD_DESCRIPTION=gta4xlwifixx-user 12 SP1A.210812.016 P610XXU2EVC5 release-keys
+BUILD_SECURITY_PATCH_DATE=2022-03-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=11
+BUILD_VERSION_RELEASE=12
 DEBUGGABLE=0
