--- a/configs/ih8sn/ih8sn_gta4xl.conf
+++ b/configs/ih8sn/ih8sn_gta4xl.conf
@@ -1,6 +1,6 @@
-BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:12/SP1A.210812.016/P615XXU4EVG7:user/release-keys
-BUILD_DESCRIPTION=gta4xlxx-user 12 SP1A.210812.016 P615XXU4EVG7 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-07-01
+BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:12/SP2A.220305.013/P615XXU4EVI1:user/release-keys
+BUILD_DESCRIPTION=gta4xlxx-user 12 SP2A.220305.013 P615XXU4EVI1 release-keys
+BUILD_SECURITY_PATCH_DATE=2022-09-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_RELEASE=12
