configs: ih8sn: Update gta4xlwifi from P610XXU2EVI1
Change-Id: I9c7d911a2e5724d1b5e46010204f2cb5661bfa97

--- a/configs/ih8sn/ih8sn_gta4xlwifi.conf
+++ b/configs/ih8sn/ih8sn_gta4xlwifi.conf
@@ -1,6 +1,6 @@
-BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:12/SP1A.210812.016/P610XXU2EVG7:user/release-keys
-BUILD_DESCRIPTION=gta4xlwifixx-user 12 SP1A.210812.016 P610XXU2EVG7 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-07-01
+BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:12/SP2A.220305.013/P610XXU2EVI1:user/release-keys
+BUILD_DESCRIPTION=gta4xlwifixx-user 12 SP2A.220305.013 P610XXU2EVI1 release-keys
+BUILD_SECURITY_PATCH_DATE=2022-09-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_RELEASE=12
