configs: ih8sn: Update gta4xl from P615XXS5FWD2
Change-Id: I483255411870341c0edd81c4ce64201cbac47acc

--- a/configs/ih8sn/ih8sn_gta4xl.conf
+++ b/configs/ih8sn/ih8sn_gta4xl.conf
@@ -1,7 +1,7 @@
-BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:12/SP2A.220305.013/P615XXU4EVI1:user/release-keys
-BUILD_DESCRIPTION=gta4xlxx-user 12 SP2A.220305.013 P615XXU4EVI1 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-09-01
+BUILD_FINGERPRINT=samsung/gta4xlxx/gta4xl:13/TP1A.220624.014/P615XXS5FWD2:user/release-keys
+BUILD_DESCRIPTION=gta4xlxx-user 13 TP1A.220624.014 P615XXS5FWD2 release-keys
+BUILD_SECURITY_PATCH_DATE=2023-05-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=12
+BUILD_VERSION_RELEASE=13
 DEBUGGABLE=0
