--- a/configs/ih8sn/ih8sn_gta4xlwifi.conf
+++ b/configs/ih8sn/ih8sn_gta4xlwifi.conf
@@ -1,7 +1,7 @@
-BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:12/SP2A.220305.013/P610XXU2EVI1:user/release-keys
-BUILD_DESCRIPTION=gta4xlwifixx-user 12 SP2A.220305.013 P610XXU2EVI1 release-keys
-BUILD_SECURITY_PATCH_DATE=2022-09-01
+BUILD_FINGERPRINT=samsung/gta4xlwifixx/gta4xlwifi:13/TP1A.220624.014/P610XXS3FWD2:user/release-keys
+BUILD_DESCRIPTION=gta4xlwifixx-user 13 TP1A.220624.014 P610XXS3FWD2 release-keys
+BUILD_SECURITY_PATCH_DATE=2023-05-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
-BUILD_VERSION_RELEASE=12
+BUILD_VERSION_RELEASE=13
 DEBUGGABLE=0
